# packing-optimisation

./: .gitignore  CMakeLists.txt  Makefile
app/: CMakeLists.txt  EACircle.cpp  EACircle.hpp  main.cpp
doc/: test.wsd
python_scripts/: animatePopulations.py  visualizeFitnessScore.py  visualizePopulation.py
src/: CMakeLists.txt
src/EA/: CMakeLists.txt  EvolutionAlgorithm.cpp  EvolutionAlgorithm.hpp  Genotype.cpp  Genotype.hpp  GenotypeData.cpp  GenotypeData.hpp  IEvolutionAlgorithm.cpp  IEvolutionAlgorithm.hpp  Population.cpp  Population.hpp
src/Geometries/: CMakeLists.txt  Circle.cpp  Circle.hpp  CircleData.cpp  CircleData.hpp  CircleFactory.cpp  CircleFactory.hpp  GeometryHelper.cpp  GeometryHelper.hpp  IGeometry.cpp  IGeometry.hpp  IGeometryData.cpp  IGeometryData.hpp  Logger.cpp  Logger.hpp
src/Multithreading/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.hpp
tests/: CMakeLists.txt  main_behaviour_test.cpp
tests/EATests/: CMakeLists.txt  EvolutionAlgorithmTest.cpp  GenotypeDataTests.cpp  GenotypeTests.cpp  PopulationTests.cpp
tests/GeometryTests/: AlignGeometryTest.cpp  CMakeLists.txt  CircleDataTest.cpp  CircleFactoryTest.cpp
tests/MultithreadingTests/: CMakeLists.txt  ThreadPoolTest.cpp
